--- a/Api-ASP.NET-Core.csproj
+++ b/Api-ASP.NET-Core.csproj
@@ -5,5 +5,9 @@
     <RootNamespace>Api_ASP.NET_Core</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MySqlConnector" Version="0.69.3" />
+  </ItemGroup>
+
 
 </Project>
